--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAmV8WpVcbME9QE3YKzHmymFfvnjZxib1g" />
+            android:value="" />
 
         <service
             android:name="com.theradikalsoftware.alertacovid_19nl.FirebaseMessageService"
