--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.theradikalsoftware.alertacovid_19nl.MainActivity"
+            android:name="com.theradikalsoftware.alertacovid_19nl.main.MainActivity"
             android:configChanges="uiMode"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
@@ -36,7 +36,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="" />
+            android:value="AIzaSyAmV8WpVcbME9QE3YKzHmymFfvnjZxib1g" />
 
         <service
             android:name="com.theradikalsoftware.alertacovid_19nl.FirebaseMessageService"
